# my-rinna-chan

./: README.md  pyproject.toml
src/llm/: __init__.py
