[project]
name = "llm"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "kyuki3rain", email = "49717102+kyuki3rain@users.noreply.github.com" }
]
dependencies = [
    "transformers>=4.30.2",
    "sentencepiece>=0.1.99",
    "torch>=2.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[[tool.rye.sources]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
type = "index"
